# site

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
content/: test2.md
src/: main.rs
src/components/: blog.rs  home.rs  mod.rs  navbar.rs
